styles/Project.module.scss
@import "./settings.scss";

.projects-container {
    display: grid;
    width: 80%;
    max-width: 1200px;
    gap: 2rem;
    margin: auto;
    grid-template-columns: 1fr 1fr;
}

.project-wrapper {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.title-wrapper {
    display: flex;
    flex-direction: row;
    margin: 0 auto 0.5rem auto;
    gap: 0.5rem;
    align-items: center;
}

.image-title {
    font-size: $font-lg;
    display: inline;
    margin: 0;
}
.project-tile {
    position: relative;
    width: 100%;
}

.image-wrapper {
    width: 100%;
    cursor: pointer;
    position: relative;
}

.image-description-box {
    z-index: 10;
    transition: 1s;
    opacity: 0;
    position: absolute;
    width: 100%;
    height: 100%;
    padding: 2rem;
    color: white;
    background-color: rgba($color: #000000, $alpha: 0.75);
}

.image-description-box:hover {
    opacity: 1;
}

.image-description {
    margin: auto;
    line-height: 1.5;
    border-radius: 10px;
    font-size: $font-md;
}

.social-icon {
    max-height: 30px;
    max-width: 30px;
    margin: 4px;
}

@media only screen and (max-width: $mobile-breakpoint) {
    .projects-container {
        width: 85%;
        grid-template-columns: 1fr;
        gap: 3rem;
    }

    .project-wrapper {
        grid-template-columns: 1fr;
    }

    .image-title {
        margin: 0 0.5rem 1rem 0;
    }

    .image-description-box {
        transition: unset;
        opacity: unset;
        position: relative;
        width: 100%;
        height: 100%;
        padding: 0;
        color: $text-main;
        background-color: unset;
    }

    .image-description {
        margin-top: 1rem;
        font-size: $font-sm;
    }

    .social-icon-box {
        width: 100%;
        text-align: center;
    }

    .image-wrapper {
        display: flex;
        flex-direction: column-reverse;
    }
}

